# msdfgen

./: CMakeLists.txt
cmake/: msdfgenConfig.cmake.in
